--- a/cheatdll/cheatdll.vcxproj.filters
+++ b/cheatdll/cheatdll.vcxproj.filters
@@ -576,6 +576,9 @@
     <ClInclude Include="aiactions.h">
       <Filter>Заголовочные файлы\ai</Filter>
     </ClInclude>
+    <ClInclude Include="fog.h">
+      <Filter>Заголовочные файлы\ui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gamemode.cpp">
@@ -1093,6 +1096,9 @@
     </ClCompile>
     <ClCompile Include="aiactions.cpp">
       <Filter>Файлы исходного кода\ai</Filter>
+    </ClCompile>
+    <ClCompile Include="fog.cpp">
+      <Filter>Файлы исходного кода\ui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
