Load save/scen screen update

--- a/cheatdll/cheatdll.vcxproj
+++ b/cheatdll/cheatdll.vcxproj
@@ -279,6 +279,7 @@
     <ClInclude Include="gamemode.h" />
     <ClInclude Include="gamespeed.h" />
     <ClInclude Include="memory.h" />
+    <ClInclude Include="loadfilelist.h" />
     <ClInclude Include="setup.h" />
     <ClInclude Include="sleepingobjects.h" />
     <ClInclude Include="textrender.h" />
@@ -470,6 +471,7 @@
     <ClCompile Include="gamemode.cpp" />
     <ClCompile Include="gamespeed.cpp" />
     <ClCompile Include="memory.cpp" />
+    <ClCompile Include="loadfilelist.cpp" />
     <ClCompile Include="setup.cpp" />
     <ClCompile Include="sleepingobjects.cpp" />
     <ClCompile Include="textrender.cpp" />
