--- a/cheatdll/cheatdll.vcxproj.filters
+++ b/cheatdll/cheatdll.vcxproj.filters
@@ -585,6 +585,9 @@
     <ClInclude Include="editorui.h">
       <Filter>Заголовочные файлы\ui</Filter>
     </ClInclude>
+    <ClInclude Include="aitimer.h">
+      <Filter>Заголовочные файлы\ai</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gamemode.cpp">
@@ -1111,6 +1114,9 @@
     </ClCompile>
     <ClCompile Include="editorui.cpp">
       <Filter>Файлы исходного кода\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="aitimer.cpp">
+      <Filter>Файлы исходного кода\ai</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
