--- a/cheatdll/cheatdll.vcxproj.filters
+++ b/cheatdll/cheatdll.vcxproj.filters
@@ -585,6 +585,9 @@
     <ClInclude Include="editorui.h">
       <Filter>Заголовочные файлы\ui</Filter>
     </ClInclude>
+    <ClInclude Include="mpsetupscreen.h">
+      <Filter>Заголовочные файлы\ui</Filter>
+    </ClInclude>
     <ClInclude Include="aitimer.h">
       <Filter>Заголовочные файлы\ai</Filter>
     </ClInclude>
@@ -1113,6 +1116,9 @@
       <Filter>Файлы исходного кода\ui</Filter>
     </ClCompile>
     <ClCompile Include="editorui.cpp">
+      <Filter>Файлы исходного кода\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="mpsetupscreen.cpp">
       <Filter>Файлы исходного кода\ui</Filter>
     </ClCompile>
     <ClCompile Include="aitimer.cpp">
