Mouse wheel scroll

--- a/cheatdll/cheatdll.vcxproj
+++ b/cheatdll/cheatdll.vcxproj
@@ -284,6 +284,7 @@
     <ClInclude Include="gamespeed.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="loadfilelist.h" />
+    <ClInclude Include="mousewheel.h" />
     <ClInclude Include="mpsetupscreen.h" />
     <ClInclude Include="setup.h" />
     <ClInclude Include="sleepingobjects.h" />
@@ -482,6 +483,7 @@
     <ClCompile Include="gamespeed.cpp" />
     <ClCompile Include="memory.cpp" />
     <ClCompile Include="loadfilelist.cpp" />
+    <ClCompile Include="mousewheel.cpp" />
     <ClCompile Include="mpsetupscreen.cpp" />
     <ClCompile Include="setup.cpp" />
     <ClCompile Include="sleepingobjects.cpp" />
